@@ -2769,10 +2769,6 @@ const string help_string = string() +
         "  -S: with -I/-M, suffix to use to build BAM file names: by default this\n"
         "      is just '.bam', i.e. the program expects 'SAMPLE_NAME.bam'\n"
         "  -B: input BAM file(s)\n"
-        "  --unpaired: ignore read pairing (for ddRAD; treat READ2's as if they were READ1's)\n"
-        "  --rm-unpaired-reads: discard unpaired reads\n"
-        "  --rm-pcr-duplicates: remove read pairs of the same sample that have the same\n"
-        "      insert length (implies --rm-unpaired-reads)\n"
         "\n"
         "  The input BAM file(s) must be sorted by coordinate.\n"
         "  With -B, records must be assigned to samples using BAM \"reads groups\"\n"
@@ -2787,11 +2783,17 @@ const string help_string = string() +
         "  -t,--threads: number of threads to use (default: 1)\n"
         "  --ignore-pe-reads: ignore paired-end reads even if present in the input\n"
         "\n"
-        "Model options:\n"
+        "SNP Model options:\n"
         "  --model: model to use to call variants and genotypes; one of\n"
         "           marukilow (default), marukihigh, or snp\n"
         "  --var-alpha: alpha threshold for discovering SNPs (default: 0.01 for marukilow)\n"
         "  --gt-alpha: alpha threshold for calling genotypes (default: 0.05)\n"
+        "\n"
+        "Paired-end options:\n"
+        "  --unpaired: ignore read pairing (only for paired-end GBS; treat READ2's as if they were READ1's)\n"
+        "  --rm-unpaired-reads: discard unpaired reads\n"
+        "  --rm-pcr-duplicates: remove all but one set ofread pairs of the same sample that \n"
+        "                       have the same insert length (implies --rm-unpaired-reads)\n"
         "\n"
         "Advanced options:\n"
         "  (De novo mode)\n"
